[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simbio-earm"
authors = [
    { name="Mauro Silberberg", email="maurosilber@gmail.com" },
]
description = "Extrinsic Apoptotic Reaction Models"
keywords = ["SimBio", "EARM", "apoptosis"]
license = {text = "MIT License"}
classifiers = [
    "Framework :: SimBio",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "readme", "version"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/maurosilber/simbio-earm"
"Bug Tracker" = "https://github.com/maurosilber/simbio-earm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "README.md"}

[tool.setuptools_scm]

[tool.isort]
profile = "black"
